# tradebot

./: .env.example  .gitignore  BACKTESTING.md  CLAUDE.md  ORDER-FLOW-TRADING-SYSTEM.md  PROD-REBUILD.md  PROD.md  PROJECT_ORDER_FLOW_SPEC.md  README.md  STRATEGY.md  main.py  pyproject.toml  requirements.txt  run_headless.py
data/: backtests.db.backup
docs/: 2025-12-03-tick-level-discovery.md
scripts/: advanced_backtest.py  batch_backtest.py  daily_recap.py  deploy.sh  deploy_headless.sh  download_historical_data.py  export_tick_data.sh  pack.sh  preflight_check.py  reboot-notify.service  reboot_notify.py  run_batch_backtest.py  run_databento_backtest.py  run_replay.py  run_tier_backtest.py  stress_tests.py  tradebot.service  watchdog.py  watchdog.service  webhook_alert.py
src/: __init__.py
src/analysis/: __init__.py  engine.py  indicators.py
src/api/: __init__.py  server.py
src/core/: __init__.py  capital.py  config.py  constants.py  notifications.py  operations.py  persistence.py  scheduler.py  types.py
src/data/: __init__.py  aggregator.py  backtest_db.py  bar_db.py  live_db.py  (+1 more)
static/: index.html
testing/: advanced_backtest.py  aug2024.md  august_2024_backtest.py  august_2024_bar_level_backtest.py  blind_backtest.py  limit_order_backtest.py  multi_month_analysis.md  multi_month_backtest.py  nov20_validation.py  run_conservative_backtest.py  run_databento_backtest.py  run_demo.py  run_tier_backtest.py  scalping_test.py  simulate_trading.py  test_execution_bridge.py  test_loss_limit.py  test_rithmic_balance.py
tests/: test_order_flow.py
(+21 files in other folders)
